# minicast

./: README.md  main.cpp  run_cmake.sh  tc.cmake
faux/: CMakeLists.txt
libswirl/: build.h  libswirl.cpp  libswirl.h  serialize.cpp  stdclass.cpp  stdclass.h  types.h
libswirl/cfg/: cfg.cpp
libswirl/gpl/lxdream/: tacore-mtta-decoupled.cpp  tacore-stta.cpp  tacore.cpp  tacore.inl
libswirl/hw/arm7/: arm7_jit_virt.cpp  arm7_jit_virt_arm32.cpp
libswirl/hw/maple/: maple_cfg.cpp
libswirl/hw/mem/: _vmem.cpp  _vmem.h
libswirl/hw/pvr/: Renderer_if.cpp  Renderer_if.h  pvr_mem.cpp  pvr_mem.h  pvr_regs.h  pvr_sb_regs.cpp  spg.cpp  ta.cpp  ta.h  ta_ctx.cpp  ta_ctx.h  ta_ring.h  ta_vtx.cpp
libswirl/hw/sh4/: SuperH4_impl.cpp  sh4_core_regs.cpp  sh4_if.h
libswirl/hw/sh4/dyna/: blockmanager.h  driver.cpp  ngen.h  perf_map.cpp  perf_map.h  regalloc.h  shil.cpp  shil.h
libswirl/hw/sh4/interpr/: sh4_opcodes.cpp
libswirl/hw/sh4/modules/: ccn.cpp
libswirl/input/: gamepad_device.cpp  gamepad_device.h
libswirl/jit/backend/arm32/: ngen_arm.S  rec_arm.cpp
libswirl/jit/backend/arm64/: rec_arm64.cpp
libswirl/jit/emitter/arm32/: E_VRegXfer.h
libswirl/linux/: common.cpp  posix_vmem.cpp
libswirl/linux-dist/: x11.cpp
libswirl/oslib/: audiostream.cpp  threading.h
libswirl/oslib/posix/: threading.cpp
libswirl/reios/: reios.cpp
libswirl/rend/mister_rend/: mister_if.cpp  mister_support.cpp  mister_support.h
libswirl/rend/refsw/: TexUtils.cpp  TexUtils.h  refsw_if.cpp  refsw_lists.cpp  refsw_lists.h  refsw_tile.cpp  refsw_tile.h
load_fpga_bitstream/: CMakeLists.txt  README.md  build.sh  main.cpp  toolchain.cmake
mem_wc/: .gitignore  Makefile  README.md  mem_wc.c
setup_hdmi/: CMakeLists.txt  README.md  build.sh  main.cpp  toolchain.cmake
tests/: CMakeLists.txt  constprop_mocks.h  constprop_test.cpp  extract_constprop.cmake  mockshil.h  regalloc_fuzz.cpp  strip_emu_includes.cmake
tools/: symbolize_perf.py
